--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </section>
         <section id="ingredients">
           <h2>
+            Ingredientes:
             <ul>
               <li>1 e 1/2 xícara (chá) de água morna</li>
               <li>1 colher (sopa) de café solúvel</li>
