--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
         </section>
       </main>
     </div>
+    <footer>
+      Feito com <img src="assents/hearth.svg" alt="Coracaozinho" /> Vinicius
+      Simonetti
+    </footer>
   </body>
 </html>
